working ovm build script

--- a/.env.example
+++ b/.env.example
@@ -2,4 +2,5 @@ ETHERSCAN_KEY=SomeEtherscanKey
 INFURA_PROJECT_ID=SomeInfuraKey
 DEPLOY_PRIVATE_KEY= new one SomeEthereumPrivateKey (including 0x prefix)
 TESTNET_DEPLOY_PRIVATE_KEY=new one SomeEthereumPrivateKey (including 0x prefix)
+EXECUTION_MANAGER_ADDRESS="0xA193E42526F1FEA8C99AF609dcEabf30C1c29fAA"
 CIRCLECI_TOKEN=Create one via https://app.circleci.com/settings/user/tokens
