--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 	"scripts": {
 		"clean-install": "rm -rf build && rm ./package-lock.json && rm -rf node_modules/* && npm install",
 		"compile:legacy": "buidler compile --config legacy/buidler.legacy.js",
+		"compile:ovm": "buidler compile --config buidler.ovm.js",
 		"compile": "npm run compile:legacy && buidler compile",
 		"coverage": "NODE_OPTIONS=\"--max-old-space-size=4096\" buidler coverage --network coverage",
 		"generate-asts": "buidler compile",
@@ -16,6 +17,7 @@
 		"slither": "pip3 install --user slither-analyzer && slither .",
 		"prepublishOnly": "npm run generate-asts",
 		"test": "buidler test",
+		"test:ovm": "npm run compile:ovm && buidler test --config buidler.ovm.js",
 		"test:gas": "buidler test --gas --optimizer || cat test-gas-used.log",
 		"test:legacy": "npm run compile:legacy && buidler test:legacy",
 		"test:deployments": "mocha test/deployments -- --timeout 15000",
@@ -58,6 +60,7 @@
 	"devDependencies": {
 		"@codechecks/client": "0.1.10",
 		"@eth-optimism/solc": "0.5.16-alpha.0",
+		"@eth-optimism/ovm-toolchain": "0.0.1-alpha.1",
 		"@nomiclabs/buidler": "1.3.7",
 		"@nomiclabs/buidler-truffle5": "1.3.4",
 		"@nomiclabs/buidler-web3": "1.3.4",
